crates/rome_formatter/tests/specs/prettier/typescript/assignment/parenthesized.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: parenthesized.ts

---
# Input
```js
// https://github.com/babel/babel/pull/12933/files
(<number>x) = null;
(x!) = null;
(a as any) = null;
(a as number) = 42;
((a as any) as string) = null;

```

# Output
```js
// https://github.com/babel/babel/pull/12933/files
(<number>
x;
) = null
(x!) = null;
(a as any) = null;
(a as number) = 42;
((a as any) as string) = null;

```

# Errors
```
error[SyntaxError]: expected `')'` but instead found `x`
  ┌─ parenthesized.ts:2:10
  │
2 │ (<number>x) = null;
  │          ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ parenthesized.ts:2:11
  │
2 │ (<number>x) = null;
  │          -^
  │          ││
  │          │An explicit or implicit semicolon is expected here...
  │          ...Which is required to end this statement


```


